--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "body-parser": "~1.13.2",
+    "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
