--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.5.0",
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "connect-redis": "^3.0.1",
     "cookie-parser": "~1.3.5",
