--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "~4.13.1",
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
-    "mongo": "^0.1.0",
+    "kerberos": "0.0.17",
+    "mongodb": "^2.0.49",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
